# image-processor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  linter.sh
.github/workflows/: cmake.yml  release.yml  test.yml
docs/: linux-installation.md  macOS-installation.md  opencv-installation.md  project-setup.md
src/: argparser.h  argparser.hpp  config.h  config.hpp  image_process.cpp  image_process.h  image_processors.h  image_processors.hpp  main.cpp
tests/: test_image_process.cpp  test_image_processors.cpp
